add gen verify code api
