# app/user/internal/data/model/model.go
@@ -1,11 +1,12 @@
 package model
 
 type User struct {
-	Name     string `fauna:"name" json:"name"`
-	Address  string `fauna:"address" json:"address"`
-	Twitter  string `fauna:"twitter" json:"twitter"`
-	Telegram string `fauna:"telegram" json:"telegram"`
-	Discord  string `fauna:"discord" json:"discord"`
+	Name       string `fauna:"name" json:"name"`
+	Address    string `fauna:"address" json:"address"`
+	Twitter    string `fauna:"twitter" json:"twitter"`
+	Telegram   string `fauna:"telegram" json:"telegram"`
+	Discord    string `fauna:"discord" json:"discord"`
+	VerifyCode string `fauna:"verify_code" json:"verify_code"`
 }
 
 type TelegramVerify struct {
